Fix: Change footer tinyurl and re-add / to img self-closing tags.

--- a/courses.html
+++ b/courses.html
@@ -131,7 +131,7 @@
                         and an appreciation for the delicate balance of ecosystems. It can be a meditative and grounding
                         experience.</p>
                     <img class="tablet-wide-crop main-images" src="assets/images/smiling-beekeeper-crop.png"
-                        alt="A smiling beekeeper standing in a sunny field.">
+                        alt="A smiling beekeeper standing in a sunny field."/>
                 </div>
                 <div class="why-div">
                     <h3>2. Honey Production</h3>
@@ -139,7 +139,7 @@
                         honey is not only a delicious reward for your efforts but can
                         also be a source of potential income or a unique gift for friends and family.</p>
                     <img class="tablet-wide-crop main-images" src="assets/images/honeycomb.jpg"
-                        alt="A closeup of honeycomb full of honey">
+                        alt="A closeup of honeycomb full of honey"/>
                 </div>
                 <div class="why-div">
                     <h3>3. Positive Environmental Impact</h3>
@@ -148,7 +148,7 @@
                         supporting local ecosystems. Healthy bee populations are essential for biodiversity and food
                         production.</p>
                     <img class="tablet-wide-crop main-images" src="assets/images/bees-lavender.jpg"
-                        alt="Two bees gathering pollen from purple flowers">
+                        alt="Two bees gathering pollen from purple flowers"/>
                 </div>
                 <div class="why-div">
                     <h3>4. Relaxation and Stress Relief</h3>
@@ -156,7 +156,7 @@
                         hive, the focused attention
                         required, and the overall pace of beekeeping can be a great way to unwind and reduce stress.</p>
                     <img class="tablet-wide-crop main-images" src="assets/images/single-beekeeper.jpg"
-                        alt="A beekeeper wearing protective clothing carefully examing their beehive">
+                        alt="A beekeeper wearing protective clothing carefully examing their beehive"/>
                 </div>
             </div>
             <h3>But...</h3>
@@ -186,7 +186,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://www.google.ie/maps/place/Moneygaff+West,+Cappeen,+Co.+Cork/@51.7949445,-9.0121492,14z/data=!4m6!3m5!1s0x4844fc7a04e15e1d:0x8e32734ebb7915f3!8m2!3d51.7949203!4d-8.9915497!16s%2Fg%2F119vn12c_?entry=ttu"
+                <a href="https://tinyurl.com/wcb-location"
                     aria-label="Go to our location on Google Maps (opens in a new tab)" target="_blank">
                     <i class="fa-solid fa-map-location-dot"></i>
                 </a>
