--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     into the intricate world of bees, appreciating the harmony they bring to our
                     environment and fostering a sustainable connection with nature.</p>
                 <img class="main-images" src="assets/images/three-beekeepers.jpg"
-                    alt="Three smiling beekeepers standing amongst heehives in sunny woodland">
+                    alt="Three smiling beekeepers standing amongst heehives in sunny woodland"/>
             </div>
         </section>
         <hr>
@@ -62,7 +62,7 @@
                     reproduction. Many foods we rely on for nutrition and agricultural
                     productivity depends on pollination by bees, such as fruits, vegetables, and nuts.</p>
                 <img class="tablet-wide-crop main-images" src="assets/images/bee-nectar.jpg"
-                    alt="A closeup of a bee on a pink flower with pollen on its knees.">
+                    alt="A closeup of a bee on a pink flower with pollen on its knees."/>
                 <p>Despite their importance, honey bees face numerous threats, including habitat loss, pesticide
                     exposure, diseases, and climate change. Efforts to protect and conserve honey bee
                     populations are essential for maintaining the health of ecosystems and ensuring global food
@@ -77,7 +77,7 @@
             <div class="invite">
                 <h3>Beekeeping Courses</h3>
                 <a href="courses.html" aria-label="Go to our Beekeeping Courses page (opens in the same tab)"><img src="assets/images/beekpeer-hive-rack.jpg"
-                        alt="A beekeeper holding a rack of honeycomb over a beehive." class="invitation-images"></a>
+                        alt="A beekeeper holding a rack of honeycomb over a beehive." class="invitation-images"/></a>
                 <p>Embark on a journey into the world of beekeeping and unlock the secrets of these vital pollinators by
                     enrolling in our immersive course. <span class='mobile'>Tap</span><span class='desktop'>Click</span> the image above to learn more.
                 </p>
@@ -86,7 +86,7 @@
             <div class="invite">
                 <h3>Local Honey</h3>
                 <a href="shop.html" aria-label="Go to our Shop page (opens in the same tab)"><img src="assets/images/honey-jars.jpg"
-                        alt="Shelves of golden honey in labelled jars." class="invitation-images"></a>
+                        alt="Shelves of golden honey in labelled jars." class="invitation-images"/></a>
                 <p>Savor the sweetness of nature with our West Cork honey. Visit our shop page to purchase your jar of
                     liquid gold and experience the pure, rich flavors captured
                     by our passionate beekeeping team. <span class='mobile'>Tap</span><span class='desktop'>Click</span>
