--- a/shop.html
+++ b/shop.html
@@ -59,7 +59,7 @@
                         <li>3 jars for €20</li>
                     </ul>
                     <img class="shop-img" src="assets/images/two-honey-jars-sq.png"
-                        alt="Two jars of clear golden honey sitting on a wooden table.">
+                        alt="Two jars of clear golden honey sitting on a wooden table."/>
                 </div>
                 <div class="products">
                     <h3>Beekeeper Suit</h3>
@@ -69,7 +69,7 @@
                         <li>€105</li>
                     </ul>
                     <img class="shop-img" src="assets/images/beekeeper-suit-sq.png"
-                        alt="White beekeeping suit with protective gloves and veil.">
+                        alt="White beekeeping suit with protective gloves and veil."/>
                 </div>
                 <div class="products">
                     <h3>Wooden Beehive - Starter Kit</h3>
@@ -79,7 +79,7 @@
                         <li>€325</li>
                     </ul>
                     <img class="shop-img" src="assets/images/colourful-beehives-sq.png"
-                        alt="A blue wooden beehive in a field.">
+                        alt="A blue wooden beehive in a field."/>
                 </div>
                 <div class="products">
                     <h3>Smoker</h3>
@@ -89,7 +89,7 @@
                         <li>€25</li>
                     </ul>
                     <img class="shop-img" src="assets/images/smoker-sq.png"
-                        alt="A metal bee smoker with brown bellows resting on top of a beehive.">
+                        alt="A metal bee smoker with brown bellows resting on top of a beehive."/>
                 </div>
                 <div class="products">
                     <h3>Glass Jars 400ml - box of 10</h3>
@@ -98,7 +98,7 @@
                         <li>Set of 10 labels included.</li>
                         <li>€15</li>
                     </ul>
-                    <img class="shop-img" src="assets/images/empty-jar-sq.png" alt="A clean empty glass jar.">
+                    <img class="shop-img" src="assets/images/empty-jar-sq.png" alt="A clean empty glass jar."/>
                 </div>
             </div>
 
@@ -125,7 +125,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://www.google.ie/maps/place/Moneygaff+West,+Cappeen,+Co.+Cork/@51.7949445,-9.0121492,14z/data=!4m6!3m5!1s0x4844fc7a04e15e1d:0x8e32734ebb7915f3!8m2!3d51.7949203!4d-8.9915497!16s%2Fg%2F119vn12c_?entry=ttu"
+                <a href="https://tinyurl.com/wcb-location"
                     aria-label="Go to our location on Google Maps (opens in a new tab)" target="_blank">
                     <i class="fa-solid fa-map-location-dot"></i>
                 </a>
