--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     committed to sharing our expertise through comprehensive beekeeping courses. Join us as we delve
                     into the intricate world of bees, appreciating the harmony they bring to our
                     environment and fostering a sustainable connection with nature.</p>
-                <img class="main-images" src="assets/images/three-beekeepers.jpg"
+                <img class="main-images" src="assets/images/three-beekeepers-720-c.webp"
                     alt="Three smiling beekeepers standing amongst heehives in sunny woodland"/>
             </div>
         </section>
@@ -61,7 +61,7 @@
                     a vital role in our ecosystem as pollinators for many species of flowers and plants, aiding in their
                     reproduction. Many foods we rely on for nutrition and agricultural
                     productivity depends on pollination by bees, such as fruits, vegetables, and nuts.</p>
-                <img class="tablet-wide-crop main-images" src="assets/images/bee-nectar.jpg"
+                <img class="tablet-wide-crop main-images" src="assets/images/bee-nectar-720-c.webp"
                     alt="A closeup of a bee on a pink flower with pollen on its knees."/>
                 <p>Despite their importance, honey bees face numerous threats, including habitat loss, pesticide
                     exposure, diseases, and climate change. Efforts to protect and conserve honey bee
@@ -76,7 +76,7 @@
         <section id="short-descriptions">
             <div class="invite">
                 <h3>Beekeeping Courses</h3>
-                <a href="courses.html" aria-label="Go to our Beekeeping Courses page (opens in the same tab)"><img src="assets/images/beekpeer-hive-rack.jpg"
+                <a href="courses.html" aria-label="Go to our Beekeeping Courses page (opens in the same tab)"><img src="assets/images/beekpeer-hive-rack-720-c.webp"
                         alt="A beekeeper holding a rack of honeycomb over a beehive." class="invitation-images"/></a>
                 <p>Embark on a journey into the world of beekeeping and unlock the secrets of these vital pollinators by
                     enrolling in our immersive course. <span class='mobile'>Tap</span><span class='desktop'>Click</span> the image above to learn more.
@@ -85,7 +85,7 @@
             <hr class="hide-hr hr-75">
             <div class="invite">
                 <h3>Local Honey</h3>
-                <a href="shop.html" aria-label="Go to our Shop page (opens in the same tab)"><img src="assets/images/honey-jars.jpg"
+                <a href="shop.html" aria-label="Go to our Shop page (opens in the same tab)"><img src="assets/images/honey-jars-720-c.webp"
                         alt="Shelves of golden honey in labelled jars." class="invitation-images"/></a>
                 <p>Savor the sweetness of nature with our West Cork honey. Visit our shop page to purchase your jar of
                     liquid gold and experience the pure, rich flavors captured
