--- a/shop.html
+++ b/shop.html
@@ -44,10 +44,10 @@
                 Please note we only offer delivery
                 to the Republic of Ireland and to Northern Ireland.</p>
             <p>Contact number: <a href="tel:021-12345678"
-                    aria-label="Call us (opens your phone app or program and autofills our phone number)">021
+                    aria-label="021 12345678">021
                     12345678</a></p>
             <p>Email: <a href="mailto:info@corkbeekeeping.ie"
-                    aria-label="Email us (opens your email app or program with our email in the To field)">info@corkbeekeeping.ie</a>
+                    aria-label="info@corkbeekeeping.ie">info@corkbeekeeping.ie</a>
             </p>
             <hr>
             <div id="products-div">
@@ -58,7 +58,7 @@
                         <li>€7 each</li>
                         <li>3 jars for €20</li>
                     </ul>
-                    <img class="shop-img" src="assets/images/two-honey-jars-sq.png"
+                    <img class="shop-img" src="assets/images/two-honey-jars-720-c.webp"
                         alt="Two jars of clear golden honey sitting on a wooden table."/>
                 </div>
                 <div class="products">
@@ -68,7 +68,7 @@
                         <li>Sizes: Small - Medium - Large</li>
                         <li>€105</li>
                     </ul>
-                    <img class="shop-img" src="assets/images/beekeeper-suit-sq.png"
+                    <img class="shop-img" src="assets/images/beekeeper-suit-720-c.webp"
                         alt="White beekeeping suit with protective gloves and veil."/>
                 </div>
                 <div class="products">
@@ -78,7 +78,7 @@
                         <li>Size: 600L x 450W x 1500H mm</li>
                         <li>€325</li>
                     </ul>
-                    <img class="shop-img" src="assets/images/colourful-beehives-sq.png"
+                    <img class="shop-img" src="assets/images/colourful-beehives-720-c.webp"
                         alt="A blue wooden beehive in a field."/>
                 </div>
                 <div class="products">
@@ -88,7 +88,7 @@
                         <li>Size: 170mm height</li>
                         <li>€25</li>
                     </ul>
-                    <img class="shop-img" src="assets/images/smoker-sq.png"
+                    <img class="shop-img" src="assets/images/smoker-720-c.webp"
                         alt="A metal bee smoker with brown bellows resting on top of a beehive."/>
                 </div>
                 <div class="products">
@@ -98,7 +98,7 @@
                         <li>Set of 10 labels included.</li>
                         <li>€15</li>
                     </ul>
-                    <img class="shop-img" src="assets/images/empty-jar-sq.png" alt="A clean empty glass jar."/>
+                    <img class="shop-img" src="assets/images/empty-jar-720-c.webp" alt="A clean empty glass jar."/>
                 </div>
             </div>
 
