Feat: Update meta tags for html pages

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="West Cork Beekeeping, a group based in the heart of West Cork offering beekeeping courses and products for sale.">
+    <meta name="keywords" content="Cork, West Cork, bees, honey, beekeeping, beekeeping courses, beekeeping equipment">
+    <meta name="author" content="Simon Henleywillis">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- Title -->
@@ -49,7 +52,7 @@
                     into the intricate world of bees, appreciating the harmony they bring to our
                     environment and fostering a sustainable connection with nature.</p>
                 <img class="main-images" src="assets/images/three-beekeepers-720-c.webp"
-                    alt="Three smiling beekeepers standing amongst heehives in sunny woodland"/>
+                    alt="Three smiling beekeepers standing amongst heehives in sunny woodland" />
             </div>
         </section>
         <hr>
@@ -62,7 +65,7 @@
                     reproduction. Many foods we rely on for nutrition and agricultural
                     productivity depends on pollination by bees, such as fruits, vegetables, and nuts.</p>
                 <img class="tablet-wide-crop main-images" src="assets/images/bee-nectar-720-c.webp"
-                    alt="A closeup of a bee on a pink flower with pollen on its knees."/>
+                    alt="A closeup of a bee on a pink flower with pollen on its knees." />
                 <p>Despite their importance, honey bees face numerous threats, including habitat loss, pesticide
                     exposure, diseases, and climate change. Efforts to protect and conserve honey bee
                     populations are essential for maintaining the health of ecosystems and ensuring global food
@@ -76,17 +79,20 @@
         <section id="short-descriptions">
             <div class="invite">
                 <h3>Beekeeping Courses</h3>
-                <a href="courses.html" aria-label="Go to our Beekeeping Courses page (opens in the same tab)"><img src="assets/images/beekpeer-hive-rack-720-c.webp"
-                        alt="A beekeeper holding a rack of honeycomb over a beehive." class="invitation-images"/></a>
+                <a href="courses.html" aria-label="Go to our Beekeeping Courses page (opens in the same tab)"><img
+                        src="assets/images/beekpeer-hive-rack-720-c.webp"
+                        alt="A beekeeper holding a rack of honeycomb over a beehive." class="invitation-images" /></a>
                 <p>Embark on a journey into the world of beekeeping and unlock the secrets of these vital pollinators by
-                    enrolling in our immersive course. <span class='mobile'>Tap</span><span class='desktop'>Click</span> the image above to learn more.
+                    enrolling in our immersive course. <span class='mobile'>Tap</span><span class='desktop'>Click</span>
+                    the image above to learn more.
                 </p>
             </div>
             <hr class="hide-hr hr-75">
             <div class="invite">
                 <h3>Local Honey</h3>
-                <a href="shop.html" aria-label="Go to our Shop page (opens in the same tab)"><img src="assets/images/honey-jars-720-c.webp"
-                        alt="Shelves of golden honey in labelled jars." class="invitation-images"/></a>
+                <a href="shop.html" aria-label="Go to our Shop page (opens in the same tab)"><img
+                        src="assets/images/honey-jars-720-c.webp" alt="Shelves of golden honey in labelled jars."
+                        class="invitation-images" /></a>
                 <p>Savor the sweetness of nature with our West Cork honey. Visit our shop page to purchase your jar of
                     liquid gold and experience the pure, rich flavors captured
                     by our passionate beekeeping team. <span class='mobile'>Tap</span><span class='desktop'>Click</span>
