--- a/shop.html
+++ b/shop.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="West Cork Beekeeping, a group based in the heart of West Cork offering beekeeping courses and products for sale.">
+    <meta name="keywords" content="Cork, West Cork, bees, honey, beekeeping, beekeeping courses, beekeeping equipment">
+    <meta name="author" content="Simon Henleywillis">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
     <title>West Cork Beekeeping | Shop</title>
