Feat: Add meta tag the automatically redirects user

--- a/form.html
+++ b/form.html
@@ -7,6 +7,8 @@
     <meta name="description" content="West Cork Beekeeping, a group based in the heart of West Cork offering beekeeping courses and products for sale.">
     <meta name="keywords" content="Cork, West Cork, bees, honey, beekeeping, beekeeping courses, beekeeping equipment">
     <meta name="author" content="Simon Henleywillis">
+    <!-- Refresh the page and redirect to the home page. Code provided by CI mentor Graeme Taylor. -->
+    <meta http-equiv="refresh" content="10; url=index.html">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
     <title>West Cork Beekeeping | Course Signup </title>
@@ -44,7 +46,7 @@
             <p>Enter your details below to register interest for an upcoming beekeeping course. You will receive an
                 acknowledgement email when your registration is processed.
                 Payment will be taken over the phone on the same or next working day.</p>
-            <form action="https://formdump.codeinstitute.net/" method="POST">
+            <form action="thank-you.html">
                 <fieldset class="details-boxes">
                     <legend>Your Details</legend>
                     <div>
