Fix: Add classes to body and footer

--- a/thank-you.html
+++ b/thank-you.html
@@ -4,9 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="West Cork Beekeeping, a group based in the heart of West Cork offering beekeeping courses and products for sale.">
+    <meta name="description"
+        content="West Cork Beekeeping, a group based in the heart of West Cork offering beekeeping courses and products for sale.">
     <meta name="keywords" content="Cork, West Cork, bees, honey, beekeeping, beekeeping courses, beekeeping equipment">
     <meta name="author" content="Simon Henleywillis">
+    <!-- Refresh the page and redirect to the home page. Code provided by CI mentor Graeme Taylor. 
+    <meta http-equiv="refresh" content="10; url=index.html"> -->
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
     <title>West Cork Beekeeping | Course Signup </title>
@@ -17,7 +20,7 @@
 
 </head>
 
-<body>
+<body class="small-page-body">
     <header id="hero">
         <div id="header-dark">
             <nav>
@@ -40,12 +43,14 @@
     <!-- Main Content-->
     <main>
             <h2>Thank You!</h2>
-            <p>Your details have been registered and you should receive an email acknowledgement intructions for payment in the next hour. If you do not recieve this email please get in touch with us.</p>
-            <p>You will be redirected to the homepage in 10 seconds.</p>
+            <p>Your details have been registered and you should receive an email acknowledgement intructions for payment
+                in
+                the next hour. If you do not recieve this email please get in touch with us.</p>
+            <h2>You will be redirected to the homepage in 10 seconds.</h2>
     </main>
 
     <!-- Footer Content -->
-    <footer>
+    <footer class="small-page-footer">
         <ul>
             <li>
                 <a href="tel:021-12345678"
