Fix: Add styles to center text in Thank You page.

--- a/thank-you.html
+++ b/thank-you.html
@@ -8,8 +8,8 @@
         content="West Cork Beekeeping, a group based in the heart of West Cork offering beekeeping courses and products for sale.">
     <meta name="keywords" content="Cork, West Cork, bees, honey, beekeeping, beekeeping courses, beekeeping equipment">
     <meta name="author" content="Simon Henleywillis">
-    <!-- Refresh the page and redirect to the home page. Code provided by CI mentor Graeme Taylor. 
-    <meta http-equiv="refresh" content="10; url=index.html"> -->
+    <!-- Refresh the page and redirect to the home page. Code provided by CI mentor Graeme Taylor. -->
+    <meta http-equiv="refresh" content="10; url=index.html">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
     <title>West Cork Beekeeping | Course Signup </title>
@@ -43,10 +43,10 @@
     <!-- Main Content-->
     <main>
             <h2>Thank You!</h2>
-            <p>Your details have been registered and you should receive an email acknowledgement intructions for payment
+            <p>Your details have been registered and you should receive an email acknowledgement with intructions for payment
                 in
                 the next hour. If you do not recieve this email please get in touch with us.</p>
-            <h2>You will be redirected to the homepage in 10 seconds.</h2>
+            <h3>You will be redirected to the homepage in 10 seconds.</h3>
     </main>
 
     <!-- Footer Content -->
