Feat: Add second paragraph about redirect failure.

--- a/thank-you.html
+++ b/thank-you.html
@@ -47,6 +47,7 @@
                 in
                 the next hour. If you do not recieve this email please get in touch with us.</p>
             <h3>You will be redirected to the homepage in 10 seconds.</h3>
+            <p>If you are not redirected within 10 seconds please use the link at the top of the page to navigate back to the homepage.</p>
     </main>
 
     <!-- Footer Content -->
