--- a/thank-you.html
+++ b/thank-you.html
@@ -12,7 +12,7 @@
     <meta http-equiv="refresh" content="10; url=index.html">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>West Cork Beekeeping | Course Signup </title>
+    <title>West Cork Beekeeping | Thank You </title>
     <!-- Favicon Links -->
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
