Doc: Update Automated Testing section and upload images.

--- a/404.html
+++ b/404.html
@@ -45,7 +45,7 @@
             <h3>It seems you may have gotten lost. Please use the links at the top of this page to navigate back to the
                 main website!</h3>
             <div >
-                <img src="assets/images/404-beehive.png" alt="A cartoon beehive dripping with honey">
+                <img src="assets/images/404-beehive.png" alt="A cartoon beehive dripping with honey"/>
             </div>
         </div>
 
