Fix: Add media queries to use smaller sized images on mobile screens in courses.html

--- a/courses.html
+++ b/courses.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="West Cork Beekeeping, a group based in the heart of West Cork offering beekeeping courses and products for sale.">
+    <meta name="description"
+        content="West Cork Beekeeping, a group based in the heart of West Cork offering beekeeping courses and products for sale.">
     <meta name="keywords" content="Cork, West Cork, bees, honey, beekeeping, beekeeping courses, beekeeping equipment">
     <meta name="author" content="Simon Henleywillis">
     <!-- Stylesheet -->
@@ -133,16 +134,21 @@
                         needs of your bees, an understanding of seasonal changes,
                         and an appreciation for the delicate balance of ecosystems. It can be a meditative and grounding
                         experience.</p>
-                    <img class="tablet-wide-crop main-images" src="assets/images/smiling-beekeeper-720-c.webp"
-                        alt="A smiling beekeeper standing in a sunny field."/>
+                    <img class="tablet-wide-crop main-images larger-img"
+                        src="assets/images/smiling-beekeeper-720-c.webp"
+                        alt="A smiling beekeeper standing in a sunny field." /><img
+                        class="tablet-wide-crop main-images mobile-img" src="assets/images/smiling-beekeeper-360-c.webp"
+                        alt="A smiling beekeeper standing in a sunny field." />
                 </div>
                 <div class="why-div">
                     <h3>2. Honey Production</h3>
                     <p>One of the most obvious benefits of beekeeping is the production of honey. Harvesting your own
                         honey is not only a delicious reward for your efforts but can
                         also be a source of potential income or a unique gift for friends and family.</p>
-                    <img class="tablet-wide-crop main-images" src="assets/images/honeycomb-720-c.webp"
-                        alt="A closeup of honeycomb full of honey"/>
+                    <img class="tablet-wide-crop main-images larger-img" src="assets/images/honeycomb-720-c.webp"
+                        alt="A closeup of honeycomb full of honey" /><img
+                        class="tablet-wide-crop main-images mobile-img" src="assets/images/honeycomb-360-c.webp"
+                        alt="A closeup of honeycomb full of honey" />
                 </div>
                 <div class="why-div">
                     <h3>3. Positive Environmental Impact</h3>
@@ -150,16 +156,20 @@
                         flowers. By becoming a beekeeper, you actively participate in
                         supporting local ecosystems. Healthy bee populations are essential for biodiversity and food
                         production.</p>
-                    <img class="tablet-wide-crop main-images" src="assets/images/bees-lavender-720-c.webp"
-                        alt="Two bees gathering pollen from purple flowers"/>
+                    <img class="tablet-wide-crop main-images larger-img" src="assets/images/bees-lavender-720-c.webp"
+                        alt="Two bees gathering pollen from purple flowers" /><img
+                        class="tablet-wide-crop main-images mobile-img" src="assets/images/bees-lavender-360-c.webp"
+                        alt="Two bees gathering pollen from purple flowers" />
                 </div>
                 <div class="why-div">
                     <h3>4. Relaxation and Stress Relief</h3>
                     <p>Many beekeepers find the process of working with bees to be therapeutic. The rhythmic hum of the
                         hive, the focused attention
                         required, and the overall pace of beekeeping can be a great way to unwind and reduce stress.</p>
-                    <img class="tablet-wide-crop main-images" src="assets/images/single-beekeeper-720-c.webp"
-                        alt="A beekeeper wearing protective clothing carefully examing their beehive"/>
+                    <img class="tablet-wide-crop main-images larger-img" src="assets/images/single-beekeeper-720-c.webp"
+                        alt="A beekeeper wearing protective clothing carefully examing their beehive" /><img
+                        class="tablet-wide-crop main-images mobile-img" src="assets/images/single-beekeeper-360-c.webp"
+                        alt="A beekeeper wearing protective clothing carefully examing their beehive" />
                 </div>
             </div>
             <h3>But...</h3>
